[gd_scene load_steps=8 format=3 uid="uid://cmvca4sdmjrxm"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_t2t85"]
[ext_resource type="PackedScene" uid="uid://ckqbqnffao38y" path="res://scenes/player.tscn" id="2_685s3"]
[ext_resource type="PackedScene" uid="uid://b5sb05vevg3k3" path="res://scenes/enemy_slow.tscn" id="3_275h5"]
[ext_resource type="PackedScene" uid="uid://d11kw7cagq1qu" path="res://scenes/enemy.tscn" id="4_0ehe4"]
[ext_resource type="PackedScene" uid="uid://bfsy84xah2kwx" path="res://scenes/diver_enemy.tscn" id="4_q1tf7"]
[ext_resource type="PackedScene" uid="uid://ghesk63ib3r8" path="res://scenes/HUD.tscn" id="5_t6afr"]
[ext_resource type="PackedScene" uid="uid://cyfnih7xcp1oc" path="res://scenes/game_over.tscn" id="6_i634k"]

[node name="game" type="Node2D"]
script = ExtResource("1_t2t85")
enemy_scenes = Array[PackedScene]([ExtResource("3_275h5"), ExtResource("4_0ehe4"), ExtResource("4_q1tf7")])

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="UILayer" instance=ExtResource("5_t6afr")]

[node name="GameOver" parent="UILayer" instance=ExtResource("6_i634k")]

[node name="EnemySpawnTimer" type="Timer" parent="."]
autostart = true

[node name="player" parent="." instance=ExtResource("2_685s3")]
position = Vector2(266, 904)

[node name="playerspawn" type="Marker2D" parent="."]
position = Vector2(266, 904)

[node name="lasercontainer" type="Node2D" parent="."]

[node name="EnemyContainer" type="Node2D" parent="."]

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
